--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>hola桌面</title>
+<title>妙笔盒子</title>
 <meta name="author" content="holaGroup" />
-<meta name="description" content="hola桌面能帮你提升手机速度，提升查找和打开APP速度，节省电量，保持手机桌面清爽整齐" />
-<meta name="keywords" content="安卓桌面, 手机桌面, 手机加速, 手机应用, 安卓系统, 应用市场, 搜索, 主题, 壁纸" />
+<meta name="description" content="妙笔盒子，手机实现三维创意" />
+<meta name="keywords" content="三维手写,nomad sculpt,procreate, 模型上色, 移动端三维模型编辑, 三维编辑软件, 安卓三维建模" />
 <meta name="Resource-type" content="Document" />
 <link rel="icon" href="images/hola.png" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="style/css/fullpage.css" />
@@ -23,7 +23,7 @@
 <!--Header-->
 <div class="header fixed">
 <div class="header_wrap">
-	<a href="index.html" class="logo" id="logo_w">hola 桌面</a>
+	<a href="index.html" class="logo" id="logo_w">妙笔盒子</a>
 	<div class="nav" id="nav_w">
 		<a class="current" href="javascript:;">首页</a>
 		<a href="#" target="_blank">关于我们</a>
@@ -49,7 +49,7 @@
 			<div class="row">
 				<img class="logo_title_cn" src="style/images/logo3.png"/>
 				<div class="content_cn">
-					<p>全球最小？最快？这只是基本功</p>
+					<p>手机上实现你的三维创意</p>
 				</div>
 			</div>
 		</div>
@@ -62,7 +62,7 @@
 			<div class="row">
 				<img class="logo_text_cn" src="style/images/logo_text_cn.png"/>
 				<div class="content_cn">
-					<p>Hola光环: 随手划出光环，动若脱兔，疾如雷电</p>
+					<p>支持多种三维网格，模型格式导入自由</p>
 				</div>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 			<div class="row">
 				<img class="logo_text_cn" src="style/images/logo_text_cn.png"/>
 				<div class="content_cn">
-					<p>T9搜索/应用索引：双击屏幕空白，你想要的，都在这里！</p>
+					<p>多种功能，高效渲染模型</p>
 				</div>
 			</div>
 		</div>
@@ -86,7 +86,7 @@
 			<div class="row">
 				<img class="logo_text_cn" src="style/images/logo_text_cn_grey.png"/>
 				<div class="content_cn">
-					<p class="grey">美化手机：主题壁纸字体，不求大而全，但求小而美</p>
+					<p class="grey">多样化笔画工具，手机平板方便易用</p>
 				</div>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 			<div class="row">
 				<img class="logo_text_cn" src="style/images/logo_text_cn.png"/>
 				<div class="content_cn">
-					<p>手势：长按屏幕空白，所见即所得；双指收拢，轻松编排</p>
+					<p>一键分享，与他人分享你的创意</p>
 				</div>
 			</div>
 		</div>
@@ -121,7 +121,7 @@
 <div class="code_box">
 	<a href="javascript:;" id="close-code"><img src="style/images/close.png"/></a>
 	<img class="download_code" src="style/images/download_code_cn.png"/>
-	<p>扫描二维码下载hola桌面</p>
+	<p>扫描二维码下载妙笔盒子app</p>
 </div>
 	
 <script type="text/javascript" src="style/js/jquery-1.11.1.min.js"></script>
