--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>妙笔盒子</title>
+<title>深圳市灯遇软件技术有限公司</title>
 <meta name="author" content="holaGroup" />
 <meta name="description" content="妙笔盒子，手机实现三维创意" />
 <meta name="keywords" content="三维手写,nomad sculpt,procreate, 模型上色, 移动端三维模型编辑, 三维编辑软件, 安卓三维建模" />
@@ -32,6 +32,11 @@
 		<a href="#" id="navList_bar">English</a>
 	</div>
 </div>
+
+<div style="display: flex; justify-content: space-around; align-items: top; height: 100vh;">
+	<div>深圳市灯遇软件技术有限公司</div>
+</div>
+	
 </div>
 <!--Menu-->
 <ul id="menu">
