--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div class="nav" id="nav_w">
 		<a class="current" href="javascript:;">首页</a>
 		<a href="#" target="_blank">关于我们</a>
-		<a href="#" target="_blank">隐私条款</a>
+		<a href="policy.html" target="_blank">隐私条款</a>
 		<a href="#" target="_blank">推广政策</a>
 		<a href="#" id="navList_bar">English</a>
 	</div>
